# experiments

./: .gitignore  README.md
.github/workflows/: ccheck.yml  check_log_behavior.yml
R/gumbel-fit/: gumbel_fit_example.R
c/: main.c
c++/align-fun/: Makefile  demo_minmax.cpp  main.cpp  minmax.h  minmax_timing.cpp
c++/charconv/: README.md  read-example.cpp
c++/check_short_circuit/: main.cpp
c++/cln/: README.md  asin_example.cpp  benktander2_cdf_demo.cpp  doubledouble_log1p_ref.cpp  exp_example.cpp  log1p_example.cpp
c++/cmath/: main.cpp
c++/complex-mult/: main.cpp
c++/decrement_large_double/: main.cpp
c++/dekker-split/: main.cpp
c++/doubledouble/: Makefile  README.md  demo.cpp  doubledouble.h
c++/finally/: gsl_util.h  main.cpp
c++/float-as-integer-ratio/: .clang-format  build.txt  float_as_integer_ratio.cpp
c++/get-numpy-float-type-nbits/: build.sh  main.cpp
c++/ginac/: main.cpp
c++/google-highway/: Makefile  example.cc
c++/hypot/: hypot_demo.cpp
c++/isnormal/: isnormal_demo.cpp
c++/kbnsummer/: Makefile  kbnsummer.hh  main.cxx
c++/libcurl/: libcurl_example.cxx
c++/log1p-complex/: Makefile  Makefile.macos  build.sh  log1p_complex.h  log1p_mp.py  longdouble_stuff.py  main.cpp  mp_longdouble_log1p.py  print_floating_point.h  print_stuff.h
c++/new-init-array/: demo.cpp
c++/qd/: README.md  hello.cpp  log1p_calc.cpp
c++/raii/: main.cpp
c++/rational/: Makefile  demo_rational.cpp  rational.hpp  rational_timing.cpp
c++/set/: set_example.cxx
c++/splitlines/: main.cpp
c++/std-hash-floats/: main.cpp
c++/std-random/: denser_uniform.cpp  uniform_extreme_bounds.cpp
c++/std-remainder/: demo.cpp
c++/stdlib-complex-log-timing/: Makefile  complex_log_timing.cpp
c++/strided_vector/: Makefile  demo.cpp  strided_vector.h
c++/templated-constant/: buildit.sh  constants.h  main.cpp
c++/thread-local/: Makefile  buildit.sh  main.cpp  main2.cpp
c++/unique_ptr/: demo.cpp
c++/variadic-templates/: demo1.cpp
c++/vfgen-template-processor-experiment/: Makefile  abtemplate.cpp  abtemplate.h  abtemplate_demo.cpp  buildit.sh  check_simple_array.cpp  simple_array.h  splitlines.h  template_processor.cpp
c++/xsimd/: README.md
c/array-index-extensions/: main.c
c/cast-large-double-to-int64/: cast_inf_to_long_int.c  cast_large_double_to_int64.c  main.c
c/check-log-behavior/: main.c
c/complex-log/: Makefile  clog1p.c  clog1p.h  demo_clog.c  demo_clog1p.c
c/complex-negative-zero/: main.c
c/cvode-coupled-chua/: Makefile  chua2.vf  chua2_cv7.c  chua2_cv7.h  chua2_root_switching.c
c/dekker-split/: main.c
c/float128/: Makefile  longdouble_float128_roundtrip.c  main.c
c/fma/: fma_example.c
c/fork/: forktest.c
c/gufunc-out-expr/: .gitignore  Makefile  README.md  dim-expr-grammar.owl  int64_arithmetic.c  (+2 more)
python/numpy/random-cython/: README.md  meson.build  random_variates.pyx  test_zipfian.py
python/numpy/random-cython/docs/: README.md  rejection_scaling_constant_plots.py  zipfian_plots.py  zipfian_rejection_method.md  zipfian_rejection_plots.py
python/numpy/random-cython/zipfian/: meson.build  random_variates.pyx  test_zipfian.py
python/numpy/random-cython/zipfian/docs/: README.md
python/scipy/special-cython-api/: README.md  meson.build  special_cython_api_demo.pyx
rust/huntfor/: Cargo.toml
rust/huntfor/src/: main.rs
rust/rand_demos/negative_binomial_demo/: Cargo.toml  README.md
rust/rand_demos/negative_binomial_demo/src/: main.rs
rust/rand_demos/poisson_demo/: Cargo.toml
wolframscript/: mod_spherical_bessel.ws
(+568 files in other folders)
