[package]
name = "huntfor"
version = "0.1.0"
authors = ["Warren Weckesser <warren.weckesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
glob = "0.3.0"
ansi_term = "0.12.1"
structopt = "0.3.25"
